# git-remote-swap

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml  rust.yml
src/: main.rs
src/lib/: lib.rs
