[package]
name = "git-remote-swap"
version = "0.1.1"
authors = ["Chad Gilbert <chad.gilbert@cqlcorp.com>"]
edition = "2018"

[lib]
path ="./src/lib/lib.rs"

[dependencies]
config = "0.10.0"
git2 = "0.13.17"
tempfile = "3"
walkdir = "2.3.1"
clap = "2.33.3"
serde = { version = "1.0.123", features = ["derive"] }